[package]
name = "csp_project_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
core_affinity = "0.8.1"
criterion = "0.5.1"
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"
rand = "0.8.5"

[[bench]]
name = "independent_output"
harness = false
